--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <link rel="manifest" href="app.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon-permissions.svg">
   <link rel="icon" href="images/icon-permissions.svg">
+
+  <script type="speculationrules">
+    {
+      "prerender": [
+      {"urls":[
+        "asado.html",
+        "calamari.html",
+        "ddl-brownies.html",
+        "fish-tacos.html",
+        "southwest-nachos.html",
+        "vegetarian-pho.html"]}
+      ]
+    }
+
+</script>
 </head>
 
 <body>
